update avatar icon with background image cover to ensure icon always covers entire circle

--- a/client/views/commentary/commentary.import.less
+++ b/client/views/commentary/commentary.import.less
@@ -120,13 +120,14 @@ header .line-wrap {
   .comment-group-meta-inner-fixed {
     position: fixed;
     top: 70px;
-    left: 5%;
+    left: 6%;
+		z-index:1;
   }
 
   .comment-group-meta-inner-bottom {
     position: absolute;
     bottom: 173px;
-    left: 5%;
+    left: 6%;
   }
 
   .comment-group-ref-above {
@@ -153,7 +154,7 @@ header .line-wrap {
     padding: 5px 0px;
     display: inline-block;
     vertical-align: top;
-    max-width: 89px;
+    max-width: 65px;
     text-align: left;
     display: block;
 
@@ -228,6 +229,7 @@ header .line-wrap {
   }
 
 }
+
 
 .comments {
   display: inline-block;
